<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ChatSlau</string>
    <string name="welcome">Selamat Datang Manusia Slau</string>
    <string name="login">Login / Daftar Dengan</string>
    <string name="pilih">Pilih Nama Samaranmu</string>
    <string name="simpan">Simpan Data</string>
    <string name="perbarui">Perbarui Data</string>
    <string name="lanjut">Lanjut</string>
    <string name="lewati">Lewati</string>
    <string name="mulai">Mulai Cerita</string>
    <string name="send">Kirim</string>
    <string name="story">Cerita</string>
    <string name="chatroom">Pesan</string>
    <string name="chat">Chat Ah!</string>
    <string-array name="report">
        <item>Spam</item>
        <item>Story tidak pantas</item>
        <item>Story mengandung pornografi</item>
    </string-array>
    <string name="no_chat">Mulai lembaran baru</string>
    <string name="delete">Hapus</string>
    <string name="no_blok">Tidak Ada User Yang Kamu Blokir</string>
    <string name="blokir">Blokir / Buka Blokir</string>
    <string-array name="history">
        <item>Story kamu</item>
        <item>Story yang kamu suka</item>
        <item>Story yang kamu komentarin</item>
    </string-array>
    <string name="logout">Keluar</string>
    <string name="setting">Pengaturan</string>
    <string name="help">Bantuan</string>
    <string name="profile">Profil</string>
    <string name="post">Buat Cerita</string>
    <string name="comment">Komen disini yaa...</string>
    <string name="syarat">Story Tidak Boleh Mengandung Pornografi</string>
    <string name="lokasi">Lokasi Kamu</string>
    <string name="unable_lokasi">Lokasi Tidak Dapat Ditemukan</string>
    <string name="no_room">Yuk Cari Temen Chat Mu Di Story!</string>
    <string name="no_history">Masa Lalumu Hampa!</string>
    <string name="no_story">Cerita Yuk!</string>
    <string name="gender">Gender</string>
    <string name="cowo">Couo</string>
    <string name="cewe">Ceue</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="helpStory">
        1. Kamu dapat menghapus ceritamu melalui menu cerita ataupun masa lalu.
        \n2. Di menu cerita, kamu dapat membuat cerita, mengirim pesan ke pembuat cerita, memblokir dan melaporkan
        pembuat cerita jika cerita yang dibuat tidak layak.
        \n3. Cerita akan otomatis terhapus jika sudah melebihi 1x24 jam.
    </string>
    <string name="helpChat">
        1. Apabila kamu sudah memblokir seseorang dan sudah membuka blokirnya kembali,
        kamu butuh memuat ulang daftar pesan agar data dapat dideteksi oleh sistem.
    </string>
    <string name="helpHistory">
        1. Di menu masa lalu, kamu hanya melihat cerita yang sudah kamu buat sebelumnya,
        cerita yang kamu sukai dan yang kamu komentari tidak termasuk ke dalamnya. (soon)
    </string>
    <string name="helpProfile">
        1. Jika foto profil tidak muncul, keluar aplikasi terlebih dahulu kemudian "close recent apps" dan coba kembali.
        \n2. Jika alamat tidak ditemukan, ubah pengaturan maps kamu ke mode tinggi.</string>
    <string name="soon">Bantuan Ini Belum Ada</string>
    <string name="saran">Kritik dan saran kamu sangat berguna bagi kami :)</string>
    <string name="kritik">Kritik &amp; Saran</string>
    <string name="slide1">Slide 1</string>
    <string name="slide2">Slide 2</string>
    <string name="slide3">Slide 3</string>
    <string name="blocked">Pengguna Terblokir</string>
    <string name="info">Informasi</string>
    <string name="umum">Umum</string>
    <string name="tentang">Tentang Kami</string>
    <string name="pertanyaan">Pertanyaan Terkait Aplikasi</string>
    <string name="terms">Persyaratan Layanan</string>
    <string name="copyright">Hak Cipta</string>
    <string name="policy">Kebijakan Privasi</string>
    <string name="contact">Hubungi Kami</string>
    <string name="version">Versi 1.0</string>
    <string name="judulfaq1">KONTEN APA AJA SIH YANG DILARANG ?</string>
    <string name="judulfaq2">PELANGGARAN APA SAJA YANG MENYEBABKAN AKUN TERBANNED ?</string>
    <string name="judulfaq3">TERUS KONTEN KAYAK APA YANG LAYAK UNTUK DI REPORT ?</string>
    <string name="judulfaq4">APAKAH BANNED USER HANYA DARI REPORT ?</string>
    <string name="judulfaq5">LALU BAGAIMANA JIKA AKUNKU TERBANNED ?</string>
    <string name="faq1">
        <ul><li>Semua konten yang ada hubunganya dengan pornografi atau semacamnya, kata kotor yang berlebihan.
        mengandung unsur pemicu pertengakaran, dan sebagainya. perlu diketahui ini adalah app curhat (tentunya curhatan yang tidak melebihi batas)
        bukan app dating jadi jangan salah memahami fungsi app ini.. kamu bisa mengambil contoh dibawah.</li>
        \n\n<li>Kami melarang untuk mencantumkan informasi pribadi seperti ID atau nomor HP di post, comment,
            reply maupun chat, itu adalah milik kamu sendiri akan tetapi kami tetap menyarankan untuk tidak mencantumkanya.</li>
        \n\n<li>
            Kata permintaan seperti cs (chat sex), vcs, atau f/m here horny, rp (roleplay), f/m here dirty chat yuk,
            sange nih, dan sejenisnya, tidak peduli kamu edit sedemikian rupa tetap akan melanggar aturan,
            kami selalu bekerja keras untuk menghukum user yang menyalahi aturan.</li>
        \n\n<li>Hindari kalimat seperti (Saling rate yuk ? , Chat bebas yuk ? Tukeran pap yuk ?, Tegang nih, dll.
            Chat bebas yukk. Chat yu lagi pengen nih, Ada F BO ? dan sejenisnya) kata-kata seperti itu berujung
            pada kalimat ambigu yang memaksakan kami untuk menghapusnya. jika kamu ulangin bakalan menyebabkan akun kamu terbanned,
            terus gimana caranya ? padahal aku gak bermaksud aneh-aneh, kamu bisa tulis secara jelas misal
            (Saling rate muka yuk, Tukeran pap muka yuk)</li>
        \n\n<li>Semua kata ambigu yang mengandung dan menjurus ke hal kotor, jadi kalau tidak
            mau terbanned buatlah kata yang jelas, hindari kata seperti anu, gituan, f/m nakal, dan lagi pengen.</li>
        \n\n<li>Kamu juga kena banned jika kamu sembarangan mengirim pesan yang tak seronok ke setiap pengguna.</li>
        \n\n<li>Kami juga melarang kalimat seperti FWB, CUDDLE, NGEROOM, ONS, BU, Rate yg tidak berujung kata
            lain dan sejenisnya karena Ini bukanlah platform dating atau sex mate finder, kamu bisa menggunakan
            kata seperti (Bestfriend) daripada FWB.</li>
        \n\n<li>Kami melarang keras menyebarkan lD atau menyebarkan identitas seseorang dengan tujuan tertentu,
            seperti nomor hp juga termasuk dan disarankan jangan pernah share nomor hp atau id lainya di timeline,
            comment atau reply sekalipun itu punya kamu sendiri, kami berhak menyimpan lokasi pelaku dan
            melaporkan data pelaku ke pihak yang berwajib jika diperlukan.</li>
        \n\n<li>Semua larangan di atas berlaku pada postingan, komen dan chat.</li></ul></string>
    <string name="faq2">
        <ul><li>Bukan hanya larangan diatas, topup koin secara ilegal pun akan membuat akun kamu terbanned.
        Begitu juga kegiatan report sembarangan. jika kamu mereport post yang tidak bersalah berkali-kali,
        maka kamu akan berpotensi terknena banned.</li>
        \n\n<li>Kamu bisa baca selengkapnya di menu Terms Of Service.</li></ul></string>
    <string name="faq3">
        <ul><li>Kamu bisa cari dengan membaca halaman ini lagi, disitu banyak contoh-contoh
        konten yang melanggar dan layak direport.</li></ul></string>
    <string name="faq4">
        <ul><li>Tidak hanya dari report, kami Administrator bekerja keras untuk mencari konten-konten
        yang melanggar secara manual maupun bantuan Al sekalipun konten itu sudah terhapus, kami juga akan memfilter
        dahulu konten yang layak di banned pembuatnya, tidak sembarang banned.</li>
        \n\n<li>Kami berhak mengupdate faq kami tanpa memperbarui dokumen ini terlebih dahulu
            demi menjaga komunitas kami.</li></ul></string>
    <string name="faq5">Kamu bisa mengajukan banding dengan cara menghubungi kami di Instagram atau Email</string>
</resources>