<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_normal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_min"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judulfaq1"
                android:gravity="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq1"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judulfaq2"
                android:gravity="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq2"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judulfaq3"
                android:gravity="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq3"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judulfaq4"
                android:gravity="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq4"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judulfaq5"
                android:gravity="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/faq5"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>