<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.PilihNama">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/Lnama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/appbar"
        android:layout_marginTop="@dimen/margin_huge"
        android:paddingStart="@dimen/margin_big"
        android:paddingEnd="@dimen/margin_big">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_profile"/>

        <TextView
            android:id="@+id/ubah_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_gravity="center"
            android:text="Ubah Foto Profil"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_gravity="center"
            android:text="OK"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="12sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_pilih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_avg"
            android:text="@string/pilih"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_light"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/btn_acak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_random"
                android:background="@color/white"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/gender"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center">

                <RadioButton
                    android:id="@+id/rb_cowo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cowo"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/rb_cewe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cewe"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/lokasi"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/unable_lokasi"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_light"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_lanjut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Lnama"
        android:layout_marginTop="32dp"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/simpan"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_lanjut"
        android:layout_margin="@dimen/margin_big"
        android:visibility="invisible"/>

</RelativeLayout>