<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_avg"
    tools:context=".user.ProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="@dimen/margin_small"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_big"
                android:src="@drawable/ic_profile"/>

            <TextView
                android:id="@+id/ubah_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_gravity="center"
                android:text="Ubah Foto Profil"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_gravity="center"
                android:text="OK"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="12sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_avg"
                android:text="Nama Samaran"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_avg"
                android:text="Jenis Kelamin"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_avg"
                    android:text="@string/lokasi"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/setLokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_small"
                    android:paddingBottom="@dimen/margin_min"
                    android:layout_gravity="bottom"
                    android:text="Set Lokasi"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_lokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv_profile"
        android:layout_marginTop="@dimen/margin_avg"
        android:text="@string/perbarui"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:visibility="invisible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_update"
        android:layout_margin="@dimen/margin_big"
        android:visibility="invisible"/>

</RelativeLayout>